<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC LearnTracker</string>
    <string name="menu_settings">Settings</string>
    <string name="intro_message">Bernardo Tabuenca. Lifelong Learning Hub Project. Welten Institute. 2014</string>
    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="check">Check-in/out</string>
    
    <!-- scheduler strings -->
    <string name="start_text">Start</string>
    <string name="cancel_text">Cancel</string>
     
    <string name="learn_tracker_alert">NFC LearnTracker Alert</string>
<!--    
    <string name="doodle_found">There is a Google doodle today!!</string>
 -->    
    <string name="task_over">Estimated time is over.</string>
    <string name="connection_error">Connection error.</string>    
    
    
<!--
Feedback cube remote 
 -->    
    <string name="move_sampler">Select sampler to overwrite:</string>
    <string name="rename_sampler">MySampler</string>
    
    <string name="samplerconfig">Sampler configuration</string>
    <string name="jukebox_button_A">A</string>
    <string name="jukebox_button_B">B</string>
    <string name="jukebox_button_C">C</string>
    <string name="jukebox_button_D">D</string>
    <string name="jukebox_button_E">E</string>
    <string name="jukebox_button_F">F</string>
    <string name="jukebox_button_G">G</string>
    <string name="jukebox_button_H">H</string>
    <string name="jukebox_button_I">I</string>
    <string name="jukebox_button_J">J</string>
    
    <string name="tab_jb">Feedback</string>
    <string name="tab_vi">Visual</string>
    <string name="tab_au">Audio</string>
    <string name="tab_ef">More...</string>

    <!-- Radio buttons -->
    <string name="rb_rainbow">rainbow</string>
    <string name="rb_rainbow_circle">circle</string>
    <string name="rb_fade">fade</string> 
    
    
    <string name="rb_beep">beep</string>
    <string name="rb_melody">melody</string>
    
    <string name="rb_fully">fully</string>
    <string name="rb_partly">partly</string>      

</resources>