<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llPromptSampler"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#333333"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewPromptJukebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_sampler"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#dddddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <EditText
                android:id="@+id/editTextRename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#dddddd"
                android:text="@string/rename_sampler"
                android:layout_weight="1"
                android:maxLength="9"
                android:selectAllOnFocus="true"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bPromptA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_A"
                android:textColor="#dddddd"
                android:textSize="15dp" />

            <Button
                android:id="@+id/bPromptB"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_B"
                android:textColor="#dddddd"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bPromptC"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_C"
                android:textColor="#dddddd"
                android:textSize="15dp" />

            <Button
                android:id="@+id/bPromptD"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_D"
                android:textColor="#dddddd"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bPromptE"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_E"
                android:textColor="#dddddd"
                android:textSize="15dp" />

            <Button
                android:id="@+id/bPromptF"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_F"
                android:textColor="#dddddd"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bPromptG"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_G"
                android:textColor="#dddddd"
                android:textSize="15dp" />

            <Button
                android:id="@+id/bPromptH"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_H"
                android:textColor="#dddddd"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bPromptI"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_I"
                android:textColor="#dddddd"
                android:textSize="15dp" />

            <Button
                android:id="@+id/bPromptJ"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClickReplaceSamplerButton"
                android:tag="@string/jukebox_button_J"
                android:textColor="#dddddd"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>