<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/iBFloppyCube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCube"
                android:src="@drawable/fcube_logo_128x"
                android:tag="@string/tab_au" />

            <ImageButton
                android:id="@+id/iBFloppyVisual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickSave"
                android:src="@drawable/feedback_128x"
                android:tag="@string/tab_au" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="left"
            android:orientation="vertical" >

<!--             <CheckBox -->
<!--                 android:id="@+id/cbBeep" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_weight="1" -->
<!--                 android:text="Beep!" -->
<!--                 android:textColor="#cc510e" -->
<!--                 android:textSize="30dp" /> -->

<!--             <CheckBox -->
<!--                 android:id="@+id/cbMelody1" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_weight="1" -->
<!--                 android:text="Melody" -->
<!--                 android:textColor="#cc510e" -->
<!--                 android:textSize="30dp" /> -->
            
            


                <RadioButton
                    android:id="@+id/rbBeep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Beep!"
                    android:textColor="#cc510e"
                    android:onClick="onSelectAudioRadioButton"
                    android:tag="@string/rb_beep"
                    android:textSize="30dp" />

                <RadioButton
                    android:id="@+id/rbMelody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Melody!"
                    android:textColor="#cc510e"
                    android:onClick="onSelectAudioRadioButton"
                    android:tag="@string/rb_melody"                    
                    android:textSize="30dp" />

                        
        </LinearLayout>
        
        
        
        
        
        
    </LinearLayout>

</FrameLayout>